--- a/lihat.html
+++ b/lihat.html
@@ -165,7 +165,8 @@
         {icon: 'img/snx.webp', name: 'Synthetix', symbol: 'snx'},
         {icon: 'img/yfi.webp', name: 'Yearn.finance', symbol: 'yfi'},
         {icon: 'img/uni.webp', name: 'Uniswap', symbol: 'uni'},
-        {icon: 'img/mkr.webp', name: 'Maker', symbol: 'mkr'}
+        {icon: 'img/mkr.webp', name: 'Maker', symbol: 'mkr'},
+        {icon: 'img/aave.webp', name: 'Aave', symbol: 'aave'}
     ];
     let prices = {};
     for (const coin of coins) {
