tambah sushi dan grt

--- a/lihat.html
+++ b/lihat.html
@@ -166,7 +166,9 @@
         {icon: 'img/yfi.webp', name: 'Yearn.finance', symbol: 'yfi'},
         {icon: 'img/uni.webp', name: 'Uniswap', symbol: 'uni'},
         {icon: 'img/mkr.webp', name: 'Maker', symbol: 'mkr'},
-        {icon: 'img/aave.webp', name: 'Aave', symbol: 'aave'}
+        {icon: 'img/aave.webp', name: 'Aave', symbol: 'aave'},
+        {icon: 'img/sushi.webp', name: 'SushiSwap', symbol: 'sushi'},
+        {icon: 'img/grt.webp', name: 'The Graph', symbol: 'grt'}
     ];
     let prices = {};
     for (const coin of coins) {
