tambah ren dan bal

--- a/lihat.html
+++ b/lihat.html
@@ -168,7 +168,9 @@
         {icon: 'img/mkr.webp', name: 'Maker', symbol: 'mkr'},
         {icon: 'img/aave.webp', name: 'Aave', symbol: 'aave'},
         {icon: 'img/sushi.webp', name: 'SushiSwap', symbol: 'sushi'},
-        {icon: 'img/grt.webp', name: 'The Graph', symbol: 'grt'}
+        {icon: 'img/grt.webp', name: 'The Graph', symbol: 'grt'},
+        {icon: 'img/ren.webp', name: 'REN', symbol: 'ren'},
+        {icon: 'img/bal.webp', name: 'Balancer', symbol: 'bal'}
     ];
     let prices = {};
     for (const coin of coins) {
